--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   dio: ">=4.0.6 <5.0.0"
-  crypto: ^3.0.2
+  crypto: ">=3.0.2 <5.0.0"
 
 dev_dependencies:
   lints: ^2.0.0
