--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tic_tac_toe_bridge
-description: Bridge for the tic tac toe game backend.
+description: The bridge to work with the server for Tic Tac Toe with which you can create your own client or bot for the game.
 version: 0.1.0
 homepage:
 
