--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tic_tac_toe_bridge
 description: The bridge to work with the server for Tic Tac Toe with which you can create your own client or bot for the game.
-version: 0.1.0
+version: 0.1.1+2
 homepage:
 
 environment:
